# sepordeh-python

./: README.md  setup.cfg
sepordeh/: __init__.py  payment.py
sepordeh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
