[metadata]
name = sepordeh
version = 0.0.1
author = sepordeh
author_email = info@sepordeh.com
description = using www.sepordeh.com webservice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sepordeh/sepordeh-python.git
project_urls = 
	Bug Tracker = https://github.com/sepordeh/sepordeh-python/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.7
install_requires = 
	requests
	certifi
	charset-normalizer
	idna
	urllib3

[egg_info]
tag_build = 
tag_date = 0
